Fix bleeding edge

--- a/src/styles/_achievements.scss
+++ b/src/styles/_achievements.scss
@@ -191,7 +191,7 @@
           width: 10%;
           flex-direction: column;
 
-          margin: -2em -0.8em -1em 0.8em;
+          margin: -0.8em -0.8em 0 0.8em;
 
           .l-shape {
             height: 50%;
